--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <br><br><br><br><br>
                 
                 
-                <a href=" https://padmapriya732.github.io/building/" title="More Details" class="details-link">
+                <a href="https://padmapriya732.github.io/padma/" title="More Details" class="details-link">
                   <i class="bi bi-link-45deg">
                    </i>
                </a>
