--- a/appointment.html
+++ b/appointment.html
@@ -47,7 +47,7 @@
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+      <!-- <img src="img/logo.png" alt=""> -->
       <h1 class="sitename">Padmpariya</h1>
     </a>
     <a href="Padmapriya.R.pdf" class="btn btn-primary py-2 px-2">Download CV</a>
@@ -134,7 +134,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200"style=padding: 20px;>
+            <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200"style= "background-color:whitesmoke;padding: 20px;">
               <h3 style="color: #FFBD39;">Project information</h3>
               <ul>
                 <li><strong style="color: black;">Category:</strong> <b style="color:black ;">Web design</li></b>
@@ -143,8 +143,8 @@
                 <li><strong style="color: black;">Language used:</strong><b style="color:black">  HTML,CSS,BOOSTRAP,PHP,MYSQL.</li></b>
               </ul>
             </div><br><br>
-            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300" style="padding: 20px;">
-              <h2 style="color:blue;">PROJECT ABSTRACT</h2>
+            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300" style=" background-color:whitesmoke; padding: 20px;">
+              <h2 style="color:#FFBD39;">PROJECT ABSTRACT</h2>
               <p style="color: black;font-family: fantasy;">
                 Online appointment booking system that provides patients or any user a easy way of booking a doctor’s appointment online. This is a web based application that overcomes the issue of managing and booking appointments according to user choice or demands. Our software has the facility to give a unique id for every patient and store their details of every patient and the staff. A username and password are required for logging in the online appointment booking system. The system uses PHP as the front-end software which is an Scripting language and has connectivity with MYSQL as the back-end software. 
                 </p>
