--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="link">
                 <a href="img/portfolio/four.avif" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link" ></a>
                 <br><br><br><br><br>
-                <a href="" title="More Details" class="details-link">
+                <a href="https://padmapriya732.github.io/htmltags/" title="More Details" class="details-link">
                   <i class="bi bi-link-45deg">
                    </i>
                </a>
