--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
 
              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
             <div class="portfolio-content h-100">
-              <img src="img/portfolio/four.avif" class="img-fluid" alt="">
+              <img src="                " class="img-fluid" alt="">
               <div class="portfolio-info">
                 <p>HTML,CSS Practice project</p>
                 <div class="click">
-                <a href=" img/portfolio/four.avif" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link" ></a>
+                <a href="                 " title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link" ></a>
                 <br><br><br><br><br>
                 <a href="https://padmapriya732.github.io/htmltags/" title="More Details" class="details-link">
                   <i class="bi bi-link-45deg">
